@@ -36,6 +36,7 @@ Bug fixes
  * Fixed placement of ``{{ block.super }}`` in ``snippets/type_index.html`` (LB (Ben Johnston))
  * Optimised database queries on group edit page (Ashia Zawaduk)
  * Choosing a popular search term for promoted search results now works correctly after pagination (Janneke Janssen)
+ * IDs used in tabbed interfaces are now namespaced to avoid collisions with other page elements (Janneke Janssen)
 
 
 Upgrade considerations
